unpackaged/main/default/objects/Service__c/fields/Last_Status_Days_Elapsed__c.field-meta.xml
<CustomField>
    <fullName>Last_Status_Days_Elapsed__c</fullName>
    <formula>TODAY() -  DATEVALUE(Last_Status_Update__c)</formula>
    <label>Last Status Days Elapsed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>