unpackaged/main/default/objects/Service__c/fields/Latest_Contact__c.field-meta.xml
<CustomField>
    <fullName>Latest_Contact__c</fullName>
    <label>Latest Contact</label>
    <type>Date</type>
</CustomField>