unpackaged/main/default/objects/Service__c/fields/Launch_DS__c.field-meta.xml
<CustomField>
    <fullName>Launch_DS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Launch DS</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ServicesFlkz</relationshipName>
    <type>Lookup</type>
</CustomField>