unpackaged/main/default/objects/Service__c/fields/Launch_DS_QA__c.field-meta.xml
<CustomField>
    <fullName>Launch_DS_QA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Launch DS QA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ServicesJ7jJ</relationshipName>
    <type>Lookup</type>
</CustomField>