unpackaged/main/default/objects/Service__c/fields/Launch_Email_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Launch_Email_Tracking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field to track whether the 24-hour, 72-hour, and 1-week post-launch emails have all been sent to the client. The field is set to True after all emails are successfully triggered.</description>
    <label>Launch Email Tracking</label>
    <type>Checkbox</type>
</CustomField>