unpackaged/main/default/objects/Service__c/fields/Launch_QA__c.field-meta.xml
<CustomField>
    <fullName>Launch_QA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Launch QA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Services3Ecj</relationshipName>
    <type>Lookup</type>
</CustomField>