unpackaged/main/default/objects/Service__c/fields/Launch_Team_DS_Quality_Score__c.field-meta.xml
<CustomField>
    <fullName>Launch_Team_DS_Quality_Score__c</fullName>
    <label>Launch Team: DS Quality Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>