unpackaged/main/default/objects/Service__c/fields/Launch_Team_Revisions__c.field-meta.xml
<CustomField>
    <fullName>Launch_Team_Revisions__c</fullName>
    <label>Launch Team: Revisions</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>