unpackaged/main/default/objects/Service__c/fields/Launch_Team_WB_Accuracy_ScoreNUM__c.field-meta.xml
<CustomField>
    <fullName>Launch_Team_WB_Accuracy_ScoreNUM__c</fullName>
    <description>Assigns a numerical value to WB Accuracy Score</description>
    <formula>CASE(Launch_Team_WB_Accuracy_Score__c, &quot;0&quot;, 0, &quot;1&quot;, 1, &quot;2&quot;, 2, &quot;3&quot;, 3,&quot;4&quot; , 4, 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Use for calculations related to WBAccuracy Score</inlineHelpText>
    <label>Launch Team: WB Accuracy Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>