unpackaged/main/default/objects/Service__c/fields/Launch_Team_WB_Complexity_Score1__c.field-meta.xml
<CustomField>
    <fullName>Launch_Team_WB_Complexity_Score1__c</fullName>
    <formula>CASE( Launch_Team_WB_Complexity_Score__c , &#39;0&#39;, 0, &#39;1&#39;, 1,&#39;2&#39;,2,3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Launch Team: WB Complexity Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>