unpackaged/main/default/objects/Service__c/fields/Launch_Team_WB_Speed_Score_NUM__c.field-meta.xml
<CustomField>
    <fullName>Launch_Team_WB_Speed_Score_NUM__c</fullName>
    <formula>CASE( Launch_Team_WB_Speed_Score__c , &quot;0&quot;, 0, &quot;1&quot;, 1, &quot;2&quot;, 2, &quot;3&quot;, 3,&quot;4&quot;, 4, 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Launch Team: WB Speed Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>