unpackaged/main/default/objects/Service__c/fields/Launch_Technical_Project_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Launch_Technical_Project_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Launch Technical Project Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ServicesFlhl</relationshipName>
    <type>Lookup</type>
</CustomField>