unpackaged/main/default/objects/Service__c/fields/Launch_Tier_IAO_Service_Launched__c.field-meta.xml
<CustomField>
    <fullName>Launch_Tier_IAO_Service_Launched__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the IAO service has been launched for accounts on the Launch tier. Marked as True once the service is successfully launched</description>
    <label>Launch Tier: IAO Service Launched</label>
    <type>Checkbox</type>
</CustomField>