unpackaged/main/default/objects/Service__c/fields/Launch_WB__c.field-meta.xml
<CustomField>
    <fullName>Launch_WB__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Launch WB</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Services3Eb7</relationshipName>
    <type>Lookup</type>
</CustomField>