unpackaged/main/default/objects/Service__c/fields/Launched_Via_Pointing__c.field-meta.xml
<CustomField>
    <fullName>Launched_Via_Pointing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Launched Via Pointing</label>
    <type>Checkbox</type>
</CustomField>