unpackaged/main/default/objects/Service__c/fields/List_of_Locations__c.field-meta.xml
<CustomField>
    <fullName>List_of_Locations__c</fullName>
    <description>Case Number: 00018011</description>
    <inlineHelpText>For use of Brand+ clients in in-app onboarding. Add the names of the 6 MLS Page communities the client would like featured on their website. Note the first community listed will be the primary community.</inlineHelpText>
    <label>List of Locations</label>
    <type>TextArea</type>
</CustomField>