unpackaged/main/default/objects/Service__c/fields/Listing_agent_name__c.field-meta.xml
<CustomField>
    <fullName>Listing_agent_name__c</fullName>
    <label>Listing agent name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>