unpackaged/main/default/objects/Service__c/fields/Logo_Concepts__c.field-meta.xml
<CustomField>
    <fullName>Logo_Concepts__c</fullName>
    <label>Logo Concepts</label>
    <type>Url</type>
</CustomField>