unpackaged/main/default/objects/Service__c/fields/LP_Site_Reference__c.field-meta.xml
<CustomField>
    <fullName>LP_Site_Reference__c</fullName>
    <formula>Opportunity__r.LP_Site_Reference__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LP Site Reference</label>
    <type>Text</type>
</CustomField>