unpackaged/main/default/objects/Service__c/fields/Marketing_Checklist2__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Checklist2__c</fullName>
    <description>Replacing this field to pull from account object (Alyssa Shaffer: 11/1/22)</description>
    <label>Marketing Checklist</label>
    <type>Url</type>
</CustomField>