unpackaged/main/default/objects/Service__c/fields/Measurement_ID__c.field-meta.xml
<CustomField>
    <fullName>Measurement_ID__c</fullName>
    <label>Measurement ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>