unpackaged/main/default/objects/Service__c/fields/Migration__c.field-meta.xml
<CustomField>
    <fullName>Migration__c</fullName>
    <label>Migration Falls in Scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>