unpackaged/main/default/objects/Service__c/fields/Migration_Audit_Redirects2__c.field-meta.xml
<CustomField>
    <fullName>Migration_Audit_Redirects2__c</fullName>
    <label>Migration Audit + Redirects2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>