unpackaged/main/default/objects/Service__c/fields/Migration_Design_Refresh_Form__c.field-meta.xml
<CustomField>
    <fullName>Migration_Design_Refresh_Form__c</fullName>
    <label>Migration - Design Refresh Form</label>
    <type>Url</type>
</CustomField>