unpackaged/main/default/objects/Service__c/fields/Migration_DS_Quality_ScoreNUM__c.field-meta.xml
<CustomField>
    <fullName>Migration_DS_Quality_ScoreNUM__c</fullName>
    <description>Assigns a numerical value to DS Quality Score</description>
    <formula>CASE( Migration_DS_Quality_Score__c, &quot;0&quot;, 0, &quot;1&quot;, 1, &quot;2&quot;, 2, &quot;3&quot;, 3,&quot;4&quot; , 4, 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Use for calculations related to DS Quality Score</inlineHelpText>
    <label>Migration: DS Quality Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>