unpackaged/main/default/objects/Service__c/fields/Migration_DS_Speed_Score__c.field-meta.xml
<CustomField>
    <fullName>Migration_DS_Speed_Score__c</fullName>
    <label>Migration: DS Speed Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>