unpackaged/main/default/objects/Service__c/fields/Migration_Staging_Link__c.field-meta.xml
<CustomField>
    <fullName>Migration_Staging_Link__c</fullName>
    <label>Migration Website Draft</label>
    <type>Url</type>
</CustomField>