unpackaged/main/default/objects/Service__c/fields/Migration_WB_Weighted_Score__c.field-meta.xml
<CustomField>
    <fullName>Migration_WB_Weighted_Score__c</fullName>
    <formula>(((value(text( Migration_WB_Quality_Score__c )) *0.4)+
(value(text( Migration_WB_Speed_Score__c )) * 0.4)+
(value(text( Migration_WB_Complexity_Score__c )) * 0.2)) / 3)*10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Migration: WB Weighted Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>