unpackaged/main/default/objects/Service__c/fields/MLS_Board__c.field-meta.xml
<CustomField>
    <fullName>MLS_Board__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MLS Board</label>
    <referenceTo>MLS_Board__c</referenceTo>
    <relationshipLabel>Services</relationshipLabel>
    <relationshipName>Services</relationshipName>
    <type>Lookup</type>
</CustomField>