unpackaged/main/default/objects/Service__c/fields/MLS_Board_Name__c.field-meta.xml
<CustomField>
    <fullName>MLS_Board_Name__c</fullName>
    <formula>MLS_Board__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MLS Board Name</label>
    <type>Text</type>
</CustomField>