unpackaged/main/default/objects/Service__c/fields/MLS_Boards__c.field-meta.xml
<CustomField>
    <fullName>MLS_Boards__c</fullName>
    <label>MLS Boards</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>