unpackaged/main/default/objects/Service__c/fields/MLS_High_Compliance__c.field-meta.xml
<CustomField>
    <fullName>MLS_High_Compliance__c</fullName>
    <formula>MLS_Board__r.High_Compliance__c</formula>
    <label>MLS High Compliance</label>
    <type>Checkbox</type>
</CustomField>