unpackaged/main/default/objects/Service__c/fields/MLS_Implementation_Timeline__c.field-meta.xml
<CustomField>
    <fullName>MLS_Implementation_Timeline__c</fullName>
    <label>MLS Implementation Timeline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MLS_Implementation_Timeline</valueSetName>
    </valueSet>
</CustomField>