unpackaged/main/default/objects/Service__c/fields/MLS_Related_Services__c.field-meta.xml
<CustomField>
    <fullName>MLS_Related_Services__c</fullName>
    <label>MLS Related Services</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>