unpackaged/main/default/objects/Service__c/fields/MLS_Status__c.field-meta.xml
<CustomField>
    <fullName>MLS_Status__c</fullName>
    <label>MLS Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Get Paperwork Started</fullName>
                <default>true</default>
                <label>Get Paperwork Started</label>
            </value>
            <value>
                <fullName>Pending Domain Name</fullName>
            </value>
            <value>
                <fullName>Pending Broker Information</fullName>
            </value>
            <value>
                <fullName>Pending Client Submission</fullName>
            </value>
            <value>
                <fullName>Agent and Broker Signature</fullName>
            </value>
            <value>
                <fullName>Pending MLS Approval</fullName>
            </value>
            <value>
                <fullName>Client HST Hidden</fullName>
            </value>
            <value>
                <fullName>Client On Hold</fullName>
            </value>
            <value>
                <fullName>IDX Complete</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Broker&#39;s Information</fullName>
                <isActive>false</isActive>
                <label>Broker&#39;s Information</label>
            </value>
            <value>
                <fullName>Broker&#39;s Signature</fullName>
                <isActive>false</isActive>
                <label>Broker&#39;s Signature</label>
            </value>
            <value>
                <fullName>Client Submission</fullName>
                <isActive>false</isActive>
                <label>Client Submission</label>
            </value>
            <value>
                <fullName>Client&#39;s Signature</fullName>
                <isActive>false</isActive>
                <label>Client&#39;s Signature</label>
            </value>
            <value>
                <fullName>Final QA</fullName>
                <isActive>false</isActive>
                <label>Final QA</label>
            </value>
            <value>
                <fullName>IDX Cancelled</fullName>
                <isActive>false</isActive>
                <label>IDX Cancelled</label>
            </value>
            <value>
                <fullName>IDX ImplementatioN</fullName>
                <isActive>false</isActive>
                <label>IDX ImplementatioN</label>
            </value>
            <value>
                <fullName>IDX Set Up Complete</fullName>
                <isActive>false</isActive>
                <label>IDX Set Up Complete</label>
            </value>
            <value>
                <fullName>Paperwork</fullName>
                <isActive>false</isActive>
                <label>Paperwork</label>
            </value>
            <value>
                <fullName>Waiting for Staging Link</fullName>
                <isActive>false</isActive>
                <label>Waiting for Staging Link</label>
            </value>
            <value>
                <fullName>WolfNet Feed</fullName>
                <isActive>false</isActive>
                <label>WolfNet Feed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>