unpackaged/main/default/objects/Service__c/fields/MLS_Turnaround_Time__c.field-meta.xml
<CustomField>
    <fullName>MLS_Turnaround_Time__c</fullName>
    <formula>IF(((
ROUND( 8 * (
( 5 * FLOOR( ( DATEVALUE( Completed_Date_Time__c) - DATE( 1900, 1, 8) ) / 7) +
MIN(5,
MOD( DATEVALUE( Completed_Date_Time__c) - DATE( 1900, 1, 8), 7) +
MIN( 1, 24 / 8 * ( MOD(Completed_Date_Time__c - DATETIMEVALUE( &#39;1900-01-08 16:00:00&#39; ), 1 ) ) )
)
)
-
( 5 * FLOOR( ( DATEVALUE( Get_Paperwork_Started_Date_Time__c ) - DATE( 1900, 1, 8) ) / 7) +
MIN( 5,
MOD( DATEVALUE( Get_Paperwork_Started_Date_Time__c) - DATE( 1996, 1, 1), 7 ) +
MIN( 1, 24 / 8 * ( MOD( Get_Paperwork_Started_Date_Time__c - DATETIMEVALUE( &#39;1900-01-08 16:00:00&#39; ), 1) ) )
)
)
),
0 )
)/8)&gt;0,(
ROUND( 8 * (
( 5 * FLOOR( ( DATEVALUE( Completed_Date_Time__c) - DATE( 1900, 1, 8) ) / 7) +
MIN(5,
MOD( DATEVALUE( Completed_Date_Time__c) - DATE( 1900, 1, 8), 7) +
MIN( 1, 24 / 8 * ( MOD(Completed_Date_Time__c - DATETIMEVALUE( &#39;1900-01-08 16:00:00&#39; ), 1 ) ) )
)
)
-
( 5 * FLOOR( ( DATEVALUE( Get_Paperwork_Started_Date_Time__c ) - DATE( 1900, 1, 8) ) / 7) +
MIN( 5,
MOD( DATEVALUE( Get_Paperwork_Started_Date_Time__c ) - DATE( 1996, 1, 1), 7 ) +
MIN( 1, 24 / 8 * ( MOD( Get_Paperwork_Started_Date_Time__c - DATETIMEVALUE( &#39;1900-01-08 16:00:00&#39; ), 1) ) )
)
)
),
0 )
)/8,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MLS Turnaround Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>