unpackaged/main/default/objects/Service__c/fields/Modules_Complete__c.field-meta.xml
<CustomField>
    <fullName>Modules_Complete__c</fullName>
    <label>Modules Complete</label>
    <type>DateTime</type>
</CustomField>