unpackaged/main/default/objects/Service__c/fields/Modules_Complete_Time__c.field-meta.xml
<CustomField>
    <fullName>Modules_Complete_Time__c</fullName>
    <label>Modules Complete Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>