unpackaged/main/default/objects/Service__c/fields/Modules_Complete_to_Website_Launched__c.field-meta.xml
<CustomField>
    <fullName>Modules_Complete_to_Website_Launched__c</fullName>
    <formula>(5 * ( FLOOR( ( Website_Launch_Date__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Website_Launch_Date__c - DATE( 1900,
1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( DATEVALUE( Modules_Complete__c )
- DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATEVALUE( Modules_Complete__c )
- DATE( 1900,
1, 8), 7 ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modules Complete to Website Launched</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>