unpackaged/main/default/objects/Service__c/fields/Modules_in_Progress__c.field-meta.xml
<CustomField>
    <fullName>Modules_in_Progress__c</fullName>
    <label>Modules in Progress</label>
    <type>DateTime</type>
</CustomField>