unpackaged/main/default/objects/Service__c/fields/Monday_Submission_Link__c.field-meta.xml
<CustomField>
    <fullName>Monday_Submission_Link__c</fullName>
    <label>Monday Submission Link</label>
    <type>Url</type>
</CustomField>