unpackaged/main/default/objects/Service__c/fields/Monthly_Budget__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Budget__c</fullName>
    <label>Ad Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>