unpackaged/main/default/objects/Service__c/fields/Months_with_Service__c.field-meta.xml
<CustomField>
    <fullName>Months_with_Service__c</fullName>
    <formula>CEILING((Cancellation_Date__c - DATEVALUE( CreatedDate))/30 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Months with Service</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>