unpackaged/main/default/objects/Service__c/fields/Moodboards__c.field-meta.xml
<CustomField>
    <fullName>Moodboards__c</fullName>
    <label>Moodboards</label>
    <type>Url</type>
</CustomField>