unpackaged/main/default/objects/Service__c/fields/Neighborhood_Guides__c.field-meta.xml
<CustomField>
    <fullName>Neighborhood_Guides__c</fullName>
    <formula>TEXT(Account__r.Neighborhood_Guides__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Neighborhood Guides</label>
    <type>Text</type>
</CustomField>